--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "vue-select": "^3.10.8",
         "tui-editor": "^1.4.10",
         "vuex": "^3.4.0",
-        "vue-router": "^3.2.0"
+        "vue-router": "^3.2.0",
+        "element-ui": "^2.14.1"
     },
     "dependencies": {
         "@toast-ui/vue-editor": "^2.5.0"
