--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "require": {
         "php": "^7.2.5",
         "ext-json": "*",
-        "barryvdh/laravel-debugbar": "^3.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -23,7 +22,8 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "barryvdh/laravel-debugbar": "^3.5"
     },
     "config": {
         "optimize-autoloader": true,
